# ICSA_Artifact

./: README.md
BlockRAFT-distributed node/: .gitignore  CMakeLists.txt  autoDeploy_3.sh  autoDeploy_5.sh  autoDeploy_7.sh
BlockRAFT-distributed node/MerkleTreeExperiments/: experiments.cpp  serialMerkleTree.h  testSerialMerkle.cc
BlockRAFT-distributed node/MerkleTreeExperiments/inputFiles/expCount/: inpCount200.json
BlockRAFT-distributed node/RestAPI/: testRestAPI.cc
BlockRAFT-distributed node/blockProducer/: blockProducer.h  testBlockProducer.cc
BlockRAFT-distributed node/dagModule/: DAGmodule.h  testDAGModule.cc  testDAGModulePool.cc  testThreadPool.cc
BlockRAFT-distributed node/follower/: follower.h
BlockRAFT-distributed node/leader/: setupFile.txt  testFile.txt  testLeader.cc  testNode.cc
BlockRAFT-distributed node/merkleTree/: globalState.h
BlockRAFT-distributed node/p2pNetwork/: p2pBlockGenerator.cpp  p2pBlockSender.cpp  txnGenerator.cpp
BlockRAFT-distributed node/protos/: block.proto  components.proto
BlockRAFT-distributed node/protos/protosUtils/: componentReader.cpp
BlockRAFT-distributed node/scheduler/: testScheduler.cc
BlockRAFT-distributed node/smartContracts/eCommerce/: eCommClient.h  eCommClientMain.cpp  eCommProcessor.h  testECommClient.cc  testECommProcessor.cc
BlockRAFT-distributed node/smartContracts/nft/: nftProcessor.h
BlockRAFT-distributed node/smartContracts/producer/: nftClient.h
BlockRAFT-distributed node/smartContracts/voting/: testVotingClient.cc  testVotingProcessor.cc  votingClientMain.cpp  votingProcessor.h
BlockRAFT-distributed node/smartContracts/wallet/: testWalletProcessor.cc  walletClient.h  walletProcessor.h
BlockRAFT-distributed_node/: README.md  config.json
BlockRAFT-distributed_node/MerkleTreeExperiments/: CMakeLists.txt  parallelMerkleTree.h  testParallelMerkleTree.cc
BlockRAFT-distributed_node/blockProducer/: blockProducer.cpp
BlockRAFT-distributed_node/blocksDB/: testBlocksDB.cc
BlockRAFT-distributed_node/dagModule/: DAGmodulePool.h  threadPool.h
BlockRAFT-distributed_node/leader/: etcdGlobals.h  leader.h  node.cpp  testingBlockProducer.h
BlockRAFT-distributed_node/merkleTree/: testGlobalState.cc
BlockRAFT-distributed_node/p2pNetwork/: testP2pBlockSender.cc
BlockRAFT-distributed_node/protos/: addressList.proto  matrix.proto  transaction.proto
BlockRAFT-distributed_node/protos/protosUtils/: componentWriter.cpp  matrixReader.cpp
BlockRAFT-distributed_node/scheduler/: scheduler.h
BlockRAFT-distributed_node/smartContracts/nft/: nftClient.h  nftClientMain.cpp
BlockRAFT-distributed_node/smartContracts/producer/: eCommClient.h  votingClient.h  walletClient.h
BlockRAFT-distributed_node/smartContracts/voting/: votingClient.h
Experiment_files/Voting/: 1000-3.txt.txt  2000-3.txt  3000-3.txt  4000-0.txt.txt  4000-1.txt  4000-100.txt  4000-2.txt  4000-20.txt.txt  4000-3.txt  4000-4.txt  4000-40.txt  4000-5.txt.txt  4000-60.txt.txt  4000-80.txt.txt  5000-3.txt.txt  setupFile.txt
Experiment_files/Wallet/: 1000-3.txt.txt  2000-3.txt.txt  3000-3.txt.txt  4000-0.txt.txt  4000-1.txt.txt  4000-100.txt  4000-2.txt  4000-20.txt  4000-3.txt  4000-4.txt.txt  4000-40.txt.txt  4000-60.txt  4000-80.txt.txt  5000-3.txt  setupFile.txt
singleNode-parallel/: .gitmodules  README.md  config.json
singleNode-parallel/.github/workflows/: clang-format-fix.yml  test.yml
singleNode-parallel/blockProducer/: blockProducer.h
singleNode-parallel/dagModule/: DAGmodule.h  testDAGModule.cc
singleNode-parallel/node/: node.cpp  transactionQueue.h
singleNode-parallel/p2pNetwork/: blockShared.h  p2pBlockGenerator.cpp  p2pBlockGenerator.h  p2pBlockSender.cpp  p2pBlockSender.h  testP2pBlockSender.cc
singleNode-parallel/protos/protosUtils/: matrixWriter.cpp
singleNode-parallel/scheduler/: scheduler.h
singleNode-parallel/smartContracts/eCommerce/: eCommClient.h  testECommClient.cc  testECommProcessor.cc
singleNode-parallel/smartContracts/nft/: nftProcessor.h  testNftProcessor.cc
singleNode-parallel/smartContracts/voting/: votingProcessor.h
singleNode-parallel/smartContracts/wallet/: testWalletProcessor.cc  walletClientMain.cpp  walletProcessor.h
singleNode-parallel/testBp/: eCommClient.h  nftClient.h  testingBlockProducer.h  votingClient.h
singleNode-parallel/testFile/: generate_transfers.py  testFile.txt
singleNode-serial/: .gitmodules  CMakeLists.txt  Dockerfile  autoDeploy.sh  commands.txt  config.json
singleNode-serial/.devcontainer/: devcontainer.json
singleNode-serial/RestAPI/: RestAPI.cpp  testRestAPI.cc
singleNode-serial/blocksDB/: blocksDB.h
singleNode-serial/client/: client.cpp  simplewalletClient.cpp
singleNode-serial/dagModule/: DAGmodule.h  testDAGModule.cc
singleNode-serial/gitHooks/: pre-commit
singleNode-serial/merkleTree/: globalState.h
singleNode-serial/node/: etcdHelp.cpp  node.cpp
singleNode-serial/p2pNetwork/: txnGenerator.cpp
singleNode-serial/protos/: block.proto  components.proto
singleNode-serial/scheduler/: scheduler.h  serialScheduler.h  testScheduler.cc
singleNode-serial/smartContracts/eCommerce/: eCommProcessor.h
singleNode-serial/smartContracts/nft/: nftClientMain.cpp  nftProcessor.h  testNFTClient.cc
singleNode-serial/smartContracts/voting/: votingProcessor.h
singleNode-serial/smartContracts/wallet/: testWalletClient.cc  walletClient.h  walletProcessor.h
singleNode-serial/testBp/: eCommClient.h  nftClient.h  sha512.h  testingBlockProducer.h  votingClient.h  walletClient.h
singleNode-serial/testFile/: setup.txt  testFile.txt
